# bowl

./: Cargo.toml
src/: diags.rs  lib.rs  main.rs  simulation.rs  ui.rs  widgets.rs
